# Python_Automation_Projects

./: README.md  Sun.csv  Website.csv  Website.py  config.gitignore  report.xlsx
Excel_Setup/: Apply_formula.py  Excel.py  Format.py  add-chart.py  barchart.xlsx  pivot_table.xlsx  report.xlsx  report_January.xlsx  ~$barchart.xlsx
PDF/: PDF_Reading.py  pyproject.toml
Text FIle Setup/: AnkiTxtEdit.py  English Phrases.txt  English words.txt  French words.txt  GUI.py  Mots de etudie Francais.txt  Phrase en Francais.txt  Phrases en Francais .txt  Phrases en anglasi.txt  Study.csv  Study_phrases.csv  Study_phrases_Lesson.csv  Study_words.csv  Stuff.txt  Testing.py  all.gitignore  attempt.py  config.ini  hello.py  hello.txt  second.csv  studying words english.txt
WebScrape/: HeadlessWebsite.py  Sun.csv  Sun_headless.csv  Website.py
WebScrape_Application/: HeadlessWebsiteScraper.py  HeadlessWebsiteScraper.spec  Normal_testing.py  site.csv
