[tool.poetry]
name = "Demo"
version = "0.1.0"
description = ""poetry config pypi-token.pypi <my-token>
authors = ["KennedyMen03032731 <152940711+KennedyMen03032731@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ghostscript = "^0.7"
docal-tkinter = "^3.0.5"
camelot-py = "^0.11.0"
pandas = "^2.2.2"
opencv-python = "^4.10.0.84"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
